syntax = "proto3";

option csharp_namespace = "PostService.Grpc";

message GetPostsByUserRequest {
  string userId = 1;
}

message PostModel {
  string id = 1;
  string userId = 2;
  string title = 3;
  string content = 4;
}

message GetPostsByUserResponse {
  repeated PostModel posts = 1;
}

service PostGrpcService {
  rpc GetPostsByUser (GetPostsByUserRequest) returns (GetPostsByUserResponse);
}
